--- a/style.css
+++ b/style.css
@@ -8,10 +8,7 @@ main {
     background-color: rgb(196, 231, 253);
     display: flex;
     justify-content: space-between;
-    /* position:relative; */
-    /* position: absolute; */
     min-height: 100vh;
-    /* width:100%; */
 }
 
 .sidebar {
@@ -116,20 +113,19 @@ main {
 
 /* ..........bars........ */
 .btnBars {
-    font-size: 2em;
     /* height: 0px; */
-    margin-right: 1em;
+    margin-top: 2em;
     /* margin-left: 1.5em; */
     background: none;
     border: none;
-    height: 0;
+    /* height: 100px; */
     z-index: 1;
     position: absolute;
     left: 90%;
     padding: 0.5em 1em 1em 0em;
     animation: bounce 1.5s 0s ease-in-out infinite;
     color: rgb(0, 157, 255);
-    /* display:inline; */
+    /* display: none; */
 }
 
 .btnBars:hover {
@@ -137,6 +133,13 @@ main {
     cursor: pointer;
     transition: all 0.3s 0s ease-in-out;
 }
+/* .barsss{
+    width: 300px;
+    height: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+} */
 
 @keyframes bounce {
     0% {
