--- a/style.css
+++ b/style.css
@@ -8,12 +8,13 @@ main {
     background-color: rgb(196, 231, 253);
     display: flex;
     justify-content: space-between;
-    min-height: 100vh;
+    height: 100vh;
 }
 
 .sidebar {
     z-index: 2;
     width: 100%;
+    height: 100vh;
     background-color: white;
     transition: all 0.6s 0s ease-out;
 }
